--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@elsoul/fresh-theme",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Theme Module for Fresh v2 App.",
   "runtimes": ["deno", "browser"],
   "exports": "./mod.ts",
@@ -16,5 +16,8 @@
       "semiColons": false,
       "singleQuote": true
     }
+  },
+  "compilerOptions": {
+    "lib": ["dom", "deno.ns"]
   }
 }
