--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@elsoul/fresh-theme",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Theme Module for Fresh v2 App.",
   "runtimes": ["deno", "browser"],
   "exports": "./mod.ts",
@@ -10,6 +10,8 @@
   },
   "license": "Apache-2.0",
   "imports": {
+    "@preact/signals": "npm:@preact/signals@1.3.0",
+    "preact/hooks": "npm:preact@10.24.3/hooks"
   },
   "fmt": {
     "options": {
