--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@elsoul/fresh-theme",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "Theme Module for Fresh v2 App.",
   "runtimes": ["deno", "browser"],
   "exports": "./mod.ts",
@@ -11,7 +11,8 @@
   "license": "Apache-2.0",
   "imports": {
     "@preact/signals": "npm:@preact/signals@1.3.0",
-    "preact/hooks": "npm:preact@10.24.3/hooks"
+    "preact/hooks": "npm:preact@10.24.3/hooks",
+    "fresh-atom": "jsr:@elsoul/fresh-atom@1.0.0"
   },
   "fmt": {
     "options": {
